T Compiler/tests/phase3tests/error/duplicateObject.t
class A 
{
  int i;
}

class B
{
  int j;
}

class C
{
  int k;
}

class Object
{
  int l;
}

int main()
{
}
